--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
 Django==4.2.3
 spacy==3.6.1
 openpyxl==3.1.2
+fuzzywuzzy==0.18.0
+elasticsearch==8.9.0
+gensim==4.3.2
+pymystem3==0.2.0
+torch==2.0.1
+transformers==4.32.0
+pandas==1.5.3
+scikit-learn==1.2.2
